CRM v0.2.5 - Real-time Bildirimler Sistemi
 Yeni Özellikler:
- Firebase Cloud Messaging (FCM) entegrasyonu
- 7 farklı bildirim türü desteği
- Modern bildirim dropdown menüsü
- Badge sayısı ile okunmamış bildirim göstergesi
- Test bildirimi sistemi
- Web push notifications desteği

 Teknik Güncellemeler:
- FCMService eklendi (400+ satır)
- Service Worker (firebase-messaging-sw.js)
- SharedPreferences ile kalıcı bildirim saklama
- Provider Pattern ile real-time güncelleme

 UI/UX İyileştirmeleri:
- Dashboard'a bildirim ikonu eklendi
- Ayarlar sayfasına test seçeneği
- Renk kodlaması ile bildirim türü ayrımı
- Responsive tasarım iyileştirmeleri

 Önceki Özellikler:
- Karanlık tema desteği
- Çoklu dil desteği (TR/EN)
- Tam CRM fonksiyonları
- Otomasyon sistemi
- Gelişmiş raporlama

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: crm
 description: A new Flutter project.
 publish_to: 'none' 
-version: 0.2.4+4
+version: 0.2.5+5
 
 environment:
   sdk: '>=3.4.3 <4.0.0'
@@ -23,10 +23,13 @@ dependencies:
   mailer: ^6.0.1
   path: ^1.9.0
   fl_chart: ^0.69.0
+  shared_preferences: ^2.2.2
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_gen: ^5.4.0
 
   # Ek paketler
   flutter_localizations:
@@ -38,3 +41,4 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  generate: true
