CRM v0.2.5 Web Deployment - GitHub Pages Ready

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,13 +1,22 @@
 {
-    "name": "crm",
-    "short_name": "crm",
+    "name": "Vize CRM v0.2.5 - Real-time Edition",
+    "short_name": "Vize CRM",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
-    "orientation": "portrait-primary",
+    "background_color": "#667eea",
+    "theme_color": "#667eea",
+    "description": "Vize Danışmanlık CRM v0.2.5 - Real-time Bildirimler ve Gelişmiş Müşteri Yönetimi",
+    "orientation": "any",
     "prefer_related_applications": false,
+    "categories": ["business", "productivity", "communication"],
+    "lang": "tr",
+    "scope": "/",
+    "features": [
+        "real-time-notifications",
+        "firebase-cloud-messaging",
+        "responsive-design",
+        "pwa-support"
+    ],
     "icons": [
         {
             "src": "icons/Icon-192.png",
