--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,7 @@
-name: Deploy CRM v0.2.5 to GitHub Pages
+name: Deploy CRM v0.2.6 to GitHub Pages
 
 on:
-  push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
+  # GitHub Actions devre dışı - Netlify kullanıyoruz
   workflow_dispatch:
 
 jobs:
@@ -18,7 +15,7 @@ jobs:
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
       with:
-        flutter-version: '3.32.6'
+        flutter-version: '3.32.8'
         channel: 'stable'
         
     - name: Install dependencies
